# claude-otel-session-scorer

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
claude_otel_session_scorer/: __init__.py  _spark.py  human_signals.py  main.py  scorer.py  silver_etl.py
dashboards/: Claude Code Session Scores V1.lvdash.json  Claude Code Session Scores V2.lvdash.json
docs/: bronze-schema.sql
tests/: conftest.py  test_human_signals.py  test_main.py  test_scorer.py  test_silver_etl.py
